# essex

./: .codecov.yml  .gitignore  .goosehints  .rustfmt.toml  .windsurfrules  CONTRIBUTING.md  Cargo.toml  Dockerfile.template  LICENSE  Makefile  README.md  clippy.toml  deny.toml  download_cli.sh  essex  install.sh  rustfmt.toml  tarpaulin-report.html  test_install.sh
.github/: pull_request_template.md  settings.yml
.github/workflows/: build.yml  version-bump.yml
basic/: .dockerignore  Dockerfile  Makefile
latest/: Dockerfile
scripts/: bump_version.sh
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/template/: mod.rs  tests.rs
templates/basic/: .description  Dockerfile  Makefile  README.md
templates/multi-arch/: .todo_description
templates/multi-stage/: .todo_description
templates/multi-stage-golang/: .todo_description
templates/multi-version/: .description
templates/ruby/: .todo_description
tests/: basic_template_test.rs  cli.rs  cli_async_test.rs  template_async_test.rs  template_properties.proptest-regressions  template_properties.rs
