[package]
name = "essex"
version = "0.1.1"
edition = "2021"
authors = ["James Brink <brink.james@gmail.com>"]
description = "A Docker project template generator"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
tera = "1.19"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
include_dir = "0.7.3"
tokio = { version = "1.35", features = ["full"] }
cached = "0.46"
walkdir = "2.5"

[dev-dependencies]
assert_fs = "1.0"
predicates = { version = "3.0", features = ["default"], default-features = false }
predicates-tree = "1.0"
assert_cmd = "2.0"
tempfile = "3.8"
mockall = "0.11"
test-case = "3.1"
rstest = "0.18"
pretty_assertions = "1.4"
proptest = "1.3"

[features]
default = []
docker_tests = []